# Novomatic

./: .gitignore  .pre-commit-config.yaml  Logistic_Regression.py  README.md  XAI_LR.py  XAI_XGBoost.py  XGBoost_method.py  mlflow.db.dvc  mlruns.dvc  models.dvc  pyproject.toml  task.ipynb  transform_json_to_parquet.py
.dvc/: config
archive/: .gitignore  games.json.dvc  games.parquet.dvc  gamesV1.parquet.dvc  gamesV2.parquet.dvc
